Addressed PR Comments